AM_CPPFLAGS = $(PANEL_CFLAGS)
AM_LDFLAGS = $(PANEL_LIBS)

pkglib_PROGRAMS = panel

panel_SOURCES = \
		fixedtip.h              \
		fixedtip.c              \
		na-marshal.c            \
		na-marshal.h            \
		na-tray.c               \
		na-tray.h               \
		na-tray-child.c         \
		na-tray-child.h         \
		na-tray-manager.c       \
		na-tray-manager.h       \
		panel.c
